<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonShort2"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:longClickable="true"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:rotationY="0"
        android:text="@string/contact2_txt"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_column="0"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toStartOf="@+id/buttonShort3"
        app:layout_constraintStart_toEndOf="@+id/buttonShort1"
        app:layout_row="0" />

    <Button
        android:id="@+id/buttonShort3"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:longClickable="true"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:rotationY="0"
        android:text="@string/contact3_txt"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_column="0"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_row="0" />

    <Button
        android:id="@+id/buttonShort1"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:longClickable="true"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:rotationY="0"
        android:text="@string/contact1_txt"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_column="0"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_row="0" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridForButtons"
        android:layout_width="300dp"
        android:layout_height="510dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:rowCount="5"
        app:useDefaultMargins="false">

        <Button
            android:id="@+id/button4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button4_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button5_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button6_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button7_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button8_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button9_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/buttonStar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button10_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button0"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:longClickable="true"
            android:rotationY="0"
            android:text="@string/button11_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/buttonHash"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button12_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            app:icon="@android:drawable/stat_sys_phone_call"
            app:iconSize="60dp"
            app:layout_column="1"
            app:layout_row="4"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button1_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button2_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="monospace"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:rotationY="0"
            android:text="@string/button3_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconPadding="0dp"
            app:layout_column="2"
            app:layout_row="0" />

    </androidx.gridlayout.widget.GridLayout>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="monospace"
        android:inputType="phone"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gridForButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="+4916091327475" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:rotationY="0"
        app:icon="@android:drawable/ic_input_delete"
        app:iconGravity="textStart"
        app:iconPadding="3dp"
        app:iconSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/gridForButtons"
        app:layout_constraintStart_toEndOf="@+id/editTextPhone"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:fontFamily="monospace"
        android:text="@string/plus_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gridForButtons"
        app:layout_constraintEnd_toEndOf="@+id/gridForButtons"
        app:layout_constraintStart_toStartOf="@+id/gridForButtons" />

</androidx.constraintlayout.widget.ConstraintLayout>